@@ -6,6 +6,14 @@
 
                                   Changelog
 
+Daniel Fandrich (23 Jul 2008)
+- Changed the long logfile elision code in runtests.pl to properly handle
+  lines ending in \r.
+
+- Changed references to TRUE and FALSE in the curl_easy_setopt man page to
+  1 and zero, respectively, since TRUE and FALSE aren't part of the
+  libcurl API.
+
 Daniel Stenberg (23 Jul 2008)
 - I went over the curl_easy_setopt man page and replaced most references to
   non-zero with the fixed value of 1. We should strive at making options
